Map fixes, new tiles.

--- a/tools/mapeditor/index.html
+++ b/tools/mapeditor/index.html
@@ -43,6 +43,16 @@
         <td><image src = "../../img/lake_border4.png" onclick="tilenum = 30"></image></td>
         <td><image src = "../../img/little_tree.png" onclick="tilenum = 31"></image></td>
         <td><image src = "../../img/road_middle.png" onclick="tilenum = 32"></image></td>
+        <td><image src = "../../img/line1.png" onclick="tilenum = 33"></image></td>
+        <td><image src = "../../img/line2.png" onclick="tilenum = 34"></image></td>
+        <td><image src = "../../img/line3.png" onclick="tilenum = 35"></image></td>
+        <td><image src = "../../img/line4.png" onclick="tilenum = 36"></image></td>
+        <td><image src = "../../img/line5.png" onclick="tilenum = 37"></image></td>
+        <td><image src = "../../img/line6.png" onclick="tilenum = 38"></image></td>
+        <td><image src = "../../img/line7.png" onclick="tilenum = 39"></image></td>
+        <td><image src = "../../img/line_n1.png" onclick="tilenum = 40"></image></td>
+        <td><image src = "../../img/line_n2.png" onclick="tilenum = 41"></image></td>
+        <td><image src = "../../img/line_n3.png" onclick="tilenum = 42"></image></td>
       </tr>
     </table>
     <table border id = "table" style = "top: 40;">
@@ -184,6 +194,36 @@
           case 32:
             image.src = "../../img/road_middle.png"
             break;
+          case 33:
+            image.src = "../../img/line1.png"
+            break;
+          case 34:
+            image.src = "../../img/line2.png"
+            break;
+          case 35:
+            image.src = "../../img/line3.png"
+            break;
+          case 36:
+            image.src = "../../img/line4.png"
+            break;
+          case 37:
+            image.src = "../../img/line5.png"
+            break;
+          case 38:
+            image.src = "../../img/line6.png"
+            break;
+          case 39:
+            image.src = "../../img/line7.png"
+            break;
+          case 40:
+            image.src = "../../img/line_n1.png"
+            break;
+          case 41:
+            image.src = "../../img/line_n2.png"
+            break;
+          case 42:
+            image.src = "../../img/line_n3.png"
+            break;
         }
       }
       generatemap()
@@ -313,6 +353,36 @@
               break;
             case 32:
               this.src = "../../img/road_middle.png"
+              break;
+            case 33:
+              this.src = "../../img/line1.png"
+              break;
+            case 34:
+              this.src = "../../img/line2.png"
+              break;
+            case 35:
+              this.src = "../../img/line3.png"
+              break;
+            case 36:
+              this.src = "../../img/line4.png"
+              break;
+            case 37:
+              this.src = "../../img/line5.png"
+              break;
+            case 38:
+              this.src = "../../img/line6.png"
+              break;
+            case 39:
+              this.src = "../../img/line7.png"
+              break;
+            case 40:
+              this.src = "../../img/line_n1.png"
+              break;
+            case 41:
+              this.src = "../../img/line_n2.png"
+              break;
+            case 42:
+              this.src = "../../img/line_n3.png"
               break;
           };
           mapdata[Number(this.id)] = tilenum;
