--- a/src/MathRace.html
+++ b/src/MathRace.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html style = "height: 100%; width: 100%; overflow: hidden;">
     <head>
+        <title>MathRace</title>
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
         <meta charset="utf-8"></meta>
         <div style = "display: none;">
             <img src = "favicon.ico">
