Map 1-2 is now map 1-3. Better map editor, fixed mobile controls bug, fixed Makefile

--- a/tools/mapeditor/index.html
+++ b/tools/mapeditor/index.html
@@ -13,7 +13,16 @@
         margin: 0px;
       }
       table {
-        border-spacing: 0px;
+        border-spacing: 0px 0px;
+      }
+      image {
+          image-rendering: moz-crisp-edges;
+          image-rendering: pixelated;
+          padding: 0px;
+          margin: 0px;
+          align: center;
+          width: 100%;
+          height: 100%;
       }
     </style>
   </head>
