--- a/src/MathRace.html
+++ b/src/MathRace.html
@@ -23,7 +23,7 @@
             }
         </style>
     </head>
-    <body style = "height: 100%; width: 100%;">
+    <body style = "height: 100%; width: 100%; background-color: #000000;">
         <!-- <div id = "game" style = "height: 100%; width: 100%;"> -->
         <canvas id = "canvas" width = "64" height = "48">
             MathRace game
