Replaced the old name with the new one in some places.

--- a/src/CalcRace.html
+++ b/src/CalcRace.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html style = "height: 100%; width: 100%; overflow: hidden;">
     <head>
-        <title>MathRace</title>
+        <title>CalcRace</title>
         <link rel="icon" type="image/x-icon" href="favicon.ico">
         <meta charset="utf-8"></meta>
         <meta name="viewport" content="width=device-width, user-scalable=no">
         <div style = "display: none;">
             <img src = "favicon.ico">
-                [)=(]
-            </img> <!-- Je suis vraiment nul en ASCII art ! -->
-            <h1>MathRace</h1>
+                [)=(] <!-- Some bad ASCII art ! -->
+            </img>
+            <h1>CalcRace</h1>
         </div>
         <style>
             canvas {
@@ -26,7 +26,7 @@
     <body style = "height: 100%; width: 100%; background-color: #000000;">
         <!-- <div id = "game" style = "height: 100%; width: 100%;"> -->
         <canvas id = "canvas" width = "64" height = "48">
-            MathRace game
+            CalcRace game
         </canvas>
         <!-- </div> -->
         <script>
@@ -74,6 +74,6 @@
                 };
             };
         </script>
-        <script async type="text/javascript" src="MathRace.js"></script>
+        <script async type="text/javascript" src="CalcRace.js"></script>
     </body>
 </html>
