Repaired map editor.

--- a/tools/mapeditor/index.html
+++ b/tools/mapeditor/index.html
@@ -15,7 +15,7 @@
       table {
         border-spacing: 0px 0px;
       }
-      image {
+      div {
           image-rendering: moz-crisp-edges;
           image-rendering: pixelated;
           padding: 0px;
@@ -28,58 +28,28 @@
   </head>
   <header>
     <table id = "choice" style = "top: 0; left: 0; height: 40px; position: fixed; background-color: white;">
-      <tr>
-        <td><image src = "../../img/tiles/world2/ask.png" onclick="tilenum = 1"></image></td>
-        <td><image src = "../../img/tiles/world2/border_curve1.png" onclick="tilenum = 2"></image></td>
-        <td><image src = "../../img/tiles/world2/border_curve2.png" onclick="tilenum = 3"></image></td>
-        <td><image src = "../../img/tiles/world2/border_curve3.png" onclick="tilenum = 4"></image></td>
-        <td><image src = "../../img/tiles/world2/border_curve4.png" onclick="tilenum = 5"></image></td>
-        <td><image src = "../../img/tiles/world2/border_horizontal1.png" onclick="tilenum = 6"></image></td>
-        <td><image src = "../../img/tiles/world2/border_horizontal2.png" onclick="tilenum = 7"></image></td>
-        <td><image src = "../../img/tiles/world2/border_vertical1.png" onclick="tilenum = 8"></image></td>
-        <td><image src = "../../img/tiles/world2/border_vertical2.png" onclick="tilenum = 9"></image></td>
-        <td><image src = "../../img/tiles/world2/bush1.png" onclick="tilenum = 10"></image></td>
-        <td><image src = "../../img/tiles/world2/coin.png" onclick="tilenum = 11"></image></td>
-        <td><image src = "../../img/tiles/world2/coin1.png" onclick="tilenum = 12"></image></td>
-        <td><image src = "../../img/tiles/world2/coin2.png" onclick="tilenum = 13"></image></td>
-        <td><image src = "../../img/tiles/world2/coin3.png" onclick="tilenum = 14"></image></td>
-        <td><image src = "../../img/tiles/world2/color_change1.png" onclick="tilenum = 15"></image></td>
-        <td><image src = "../../img/tiles/world2/color_change2.png" onclick="tilenum = 16"></image></td>
-        <td><image src = "../../img/tiles/world2/color_change3.png" onclick="tilenum = 17"></image></td>
-        <td><image src = "../../img/tiles/world2/color_change4.png" onclick="tilenum = 18"></image></td>
-        <td><image src = "../../img/tiles/world2/cube.png" onclick="tilenum = 19"></image></td>
-        <td><image src = "../../img/tiles/world2/curve_middle1.png" onclick="tilenum = 20"></image></td>
-        <td><image src = "../../img/tiles/world2/curve_middle2.png" onclick="tilenum = 21"></image></td>
-        <td><image src = "../../img/tiles/world2/curve_middle3.png" onclick="tilenum = 22"></image></td>
-        <td><image src = "../../img/tiles/world2/curve_middle4.png" onclick="tilenum = 23"></image></td>
-        <td><image src = "../../img/tiles/world2/endline.png" onclick="tilenum = 24"></image></td>
-        <td><image src = "../../img/tiles/world2/grass1.png" onclick="tilenum = 25"></image></td>
-        <td><image src = "../../img/tiles/world2/grass2.png" onclick="tilenum = 26"></image></td>
-        <td><image src = "../../img/tiles/world2/lake_border1.png" onclick="tilenum = 27"></image></td>
-        <td><image src = "../../img/tiles/world2/lake_border2.png" onclick="tilenum = 28"></image></td>
-        <td><image src = "../../img/tiles/world2/lake_border3.png" onclick="tilenum = 29"></image></td>
-        <td><image src = "../../img/tiles/world2/lake_border4.png" onclick="tilenum = 30"></image></td>
-        <td><image src = "../../img/tiles/world2/little_tree.png" onclick="tilenum = 31"></image></td>
-        <td><image src = "../../img/tiles/world2/road_middle.png" onclick="tilenum = 32"></image></td>
-        <td><image src = "../../img/tiles/world2/line1.png" onclick="tilenum = 33"></image></td>
-        <td><image src = "../../img/tiles/world2/line2.png" onclick="tilenum = 34"></image></td>
-        <td><image src = "../../img/tiles/world2/line3.png" onclick="tilenum = 35"></image></td>
-        <td><image src = "../../img/tiles/world2/line4.png" onclick="tilenum = 36"></image></td>
-        <td><image src = "../../img/tiles/world2/line5.png" onclick="tilenum = 37"></image></td>
-        <td><image src = "../../img/tiles/world2/line6.png" onclick="tilenum = 38"></image></td>
-        <td><image src = "../../img/tiles/world2/line7.png" onclick="tilenum = 39"></image></td>
-        <td><image src = "../../img/tiles/world2/line_n1.png" onclick="tilenum = 40"></image></td>
-        <td><image src = "../../img/tiles/world2/line_n2.png" onclick="tilenum = 41"></image></td>
-        <td><image src = "../../img/tiles/world2/line_n3.png" onclick="tilenum = 42"></image></td>
-        <td><image src = "../../img/tiles/world2/line8.png" onclick="tilenum = 43"></image></td>
-        <td><image src = "../../img/tiles/world2/line9.png" onclick="tilenum = 44"></image></td>
-      </tr>
+      <!-- <tr>
+        <td><div onclick="tilenum = 1" style="background-image: url('../../img/world1.png'); background-position: -32px -64px; width: 32px; height: 32px;"></div></td>
+      </tr> -->
     </table>
   </header>
   <body style = "margin-top: 41px;">
     <script>
       tilenum = 1;
       let mapdata = Array();
+      table = document.getElementById("choice");
+      line = document.createElement("tr");
+      table.append(line);
+      for(y=0;y<8;y++){
+          for(x=0;x<8;x++){
+              td = document.createElement("td");
+              div = document.createElement("div");
+              div.setAttribute("onclick", "tilenum = " + String(y*8+x+1));
+              div.style = "background-image: url('../../img/world1.png'); background-position: -" + String(x*32) + "px -" + String(y*32) + "px; width: 32px; height: 32px;";
+              td.append(div);
+              line.append(td);
+          }
+      }
     </script>
     <table border id = "table" style = "top: 41px;">
       <!-- -->
@@ -122,141 +92,8 @@
       mapdata = []
       for(i=0;i<data.length;i++){
         mapdata.push(Number(data[i]))
-        image = document.getElementById(String(i))
-        switch(mapdata[i]){
-          case 1:
-            image.src = "../../img/tiles/world2/ask.png"
-            break;
-          case 2:
-            image.src = "../../img/tiles/world2/border_curve1.png"
-            break;
-          case 3:
-            image.src = "../../img/tiles/world2/border_curve2.png"
-            break;
-          case 4:
-            image.src = "../../img/tiles/world2/border_curve3.png"
-            break;
-          case 5:
-            image.src = "../../img/tiles/world2/border_curve4.png"
-            break;
-          case 6:
-            image.src = "../../img/tiles/world2/border_horizontal1.png"
-            break;
-          case 7:
-            image.src = "../../img/tiles/world2/border_horizontal2.png"
-            break;
-          case 8:
-            image.src = "../../img/tiles/world2/border_vertical1.png"
-            break;
-          case 9:
-            image.src = "../../img/tiles/world2/border_vertical2.png"
-            break;
-          case 10:
-            image.src = "../../img/tiles/world2/bush1.png"
-            break;
-          case 11:
-            image.src = "../../img/tiles/world2/coin.png"
-            break;
-          case 12:
-            image.src = "../../img/tiles/world2/coin1.png"
-            break;
-          case 13:
-            image.src = "../../img/tiles/world2/coin2.png"
-            break;
-          case 14:
-            image.src = "../../img/tiles/world2/coin3.png"
-            break;
-          case 15:
-            image.src = "../../img/tiles/world2/color_change1.png"
-            break;
-          case 16:
-            image.src = "../../img/tiles/world2/color_change2.png"
-            break;
-          case 17:
-            image.src = "../../img/tiles/world2/color_change3.png"
-            break;
-          case 18:
-            image.src = "../../img/tiles/world2/color_change4.png"
-            break;
-          case 19:
-            image.src = "../../img/tiles/world2/cube.png"
-            break;
-          case 20:
-            image.src = "../../img/tiles/world2/curve_middle1.png"
-            break;
-          case 21:
-            image.src = "../../img/tiles/world2/curve_middle2.png"
-            break;
-          case 22:
-            image.src = "../../img/tiles/world2/curve_middle3.png"
-            break;
-          case 23:
-            image.src = "../../img/tiles/world2/curve_middle4.png"
-            break;
-          case 24:
-            image.src = "../../img/tiles/world2/endline.png"
-            break;
-          case 25:
-            image.src = "../../img/tiles/world2/grass1.png"
-            break;
-          case 26:
-            image.src = "../../img/tiles/world2/grass2.png"
-            break;
-          case 27:
-            image.src = "../../img/tiles/world2/lake_border1.png"
-            break;
-          case 28:
-            image.src = "../../img/tiles/world2/lake_border2.png"
-            break;
-          case 29:
-            image.src = "../../img/tiles/world2/lake_border3.png"
-            break;
-          case 30:
-            image.src = "../../img/tiles/world2/lake_border4.png"
-            break;
-          case 31:
-            image.src = "../../img/tiles/world2/little_tree.png"
-            break;
-          case 32:
-            image.src = "../../img/tiles/world2/road_middle.png"
-            break;
-          case 33:
-            image.src = "../../img/tiles/world2/line1.png"
-            break;
-          case 34:
-            image.src = "../../img/tiles/world2/line2.png"
-            break;
-          case 35:
-            image.src = "../../img/tiles/world2/line3.png"
-            break;
-          case 36:
-            image.src = "../../img/tiles/world2/line4.png"
-            break;
-          case 37:
-            image.src = "../../img/tiles/world2/line5.png"
-            break;
-          case 38:
-            image.src = "../../img/tiles/world2/line6.png"
-            break;
-          case 39:
-            image.src = "../../img/tiles/world2/line7.png"
-            break;
-          case 40:
-            image.src = "../../img/tiles/world2/line_n1.png"
-            break;
-          case 41:
-            image.src = "../../img/tiles/world2/line_n2.png"
-            break;
-          case 42:
-            image.src = "../../img/tiles/world2/line_n3.png"
-            break;
-          case 43:
-            image.src = "../../img/tiles/world2/line8.png"
-            break;
-          case 44:
-            image.src = "../../img/tiles/world2/line9.png"
-            break;
-        }
+        div = document.getElementById(String(i))
+        div.style = "background-image: url('../../img/world1.png'); background-position: -" + String(((mapdata[i]-1)%8)*32) + "px -" + String(Math.floor((mapdata[i]-1)/8)*32) + "px; width: 32px; height: 32px;";
       }
       generatemap()
     }
@@ -283,146 +120,14 @@
       for(x=0;x<64;x++){
         cell = document.createElement("td");
         line.append(cell);
-        image = document.createElement("img");
-        image.src = "../../img/grass1.png"
-        image.id = String(y*64+x);
+        div = document.createElement("div");
+        div.onclick = onclick="tilenum = " + String(y*8+x);
+        div.style = "background-image: url('../../img/world1.png'); background-position: -0px -96px; width: 32px; height: 32px;";
+        div.id = String(y*64+x);
         mapdata[y*64+x] = 25;
-        cell.append(image);
-        image.onclick = function(image) {
-          switch(tilenum){
-            case 1:
-              this.src = "../../img/ask.png"
-              break;
-            case 2:
-              this.src = "../../img/border_curve1.png"
-              break;
-            case 3:
-              this.src = "../../img/border_curve2.png"
-              break;
-            case 4:
-              this.src = "../../img/border_curve3.png"
-              break;
-            case 5:
-              this.src = "../../img/border_curve4.png"
-              break;
-            case 6:
-              this.src = "../../img/border_horizontal1.png"
-              break;
-            case 7:
-              this.src = "../../img/border_horizontal2.png"
-              break;
-            case 8:
-              this.src = "../../img/border_vertical1.png"
-              break;
-            case 9:
-              this.src = "../../img/border_vertical2.png"
-              break;
-            case 10:
-              this.src = "../../img/bush1.png"
-              break;
-            case 11:
-              this.src = "../../img/coin.png"
-              break;
-            case 12:
-              this.src = "../../img/coin1.png"
-              break;
-            case 13:
-              this.src = "../../img/coin2.png"
-              break;
-            case 14:
-              this.src = "../../img/coin3.png"
-              break;
-            case 15:
-              this.src = "../../img/color_change1.png"
-              break;
-            case 16:
-              this.src = "../../img/color_change2.png"
-              break;
-            case 17:
-              this.src = "../../img/color_change3.png"
-              break;
-            case 18:
-              this.src = "../../img/color_change4.png"
-              break;
-            case 19:
-              this.src = "../../img/cube.png"
-              break;
-            case 20:
-              this.src = "../../img/curve_middle1.png"
-              break;
-            case 21:
-              this.src = "../../img/curve_middle2.png"
-              break;
-            case 22:
-              this.src = "../../img/curve_middle3.png"
-              break;
-            case 23:
-              this.src = "../../img/curve_middle4.png"
-              break;
-            case 24:
-              this.src = "../../img/endline.png"
-              break;
-            case 25:
-              this.src = "../../img/grass1.png"
-              break;
-            case 26:
-              this.src = "../../img/grass2.png"
-              break;
-            case 27:
-              this.src = "../../img/lake_border1.png"
-              break;
-            case 28:
-              this.src = "../../img/lake_border2.png"
-              break;
-            case 29:
-              this.src = "../../img/lake_border3.png"
-              break;
-            case 30:
-              this.src = "../../img/lake_border4.png"
-              break;
-            case 31:
-              this.src = "../../img/little_tree.png"
-              break;
-            case 32:
-              this.src = "../../img/road_middle.png"
-              break;
-            case 33:
-              this.src = "../../img/line1.png"
-              break;
-            case 34:
-              this.src = "../../img/line2.png"
-              break;
-            case 35:
-              this.src = "../../img/line3.png"
-              break;
-            case 36:
-              this.src = "../../img/line4.png"
-              break;
-            case 37:
-              this.src = "../../img/line5.png"
-              break;
-            case 38:
-              this.src = "../../img/line6.png"
-              break;
-            case 39:
-              this.src = "../../img/line7.png"
-              break;
-            case 40:
-              this.src = "../../img/line_n1.png"
-              break;
-            case 41:
-              this.src = "../../img/line_n2.png"
-              break;
-            case 42:
-              this.src = "../../img/line_n3.png"
-              break;
-            case 43:
-              this.src = "../../img/line8.png"
-              break;
-            case 44:
-              this.src = "../../img/line9.png"
-              break;
-          };
+        cell.append(div);
+        div.onclick = function(div) {
+          this.style = "background-image: url('../../img/world1.png'); background-position: -" + String(((tilenum-1)%8)*32) + "px -" + String(Math.floor((tilenum-1)/8)*32) + "px; width: 32px; height: 32px;";
           mapdata[Number(this.id)] = tilenum;
           generatemap();
         }
