--- a/tools/mapeditor/index.html
+++ b/tools/mapeditor/index.html
@@ -32,24 +32,101 @@ along with this program. If not, see https://www.gnu.org/licenses/.
             }
             table {
                 border-spacing: 0px 0px;
+                font-family: sans;
             }
             div {
-                    image-rendering: moz-crisp-edges;
-                    image-rendering: pixelated;
-                    padding: 0px;
-                    margin: 0px;
-                    align: center;
-                    width: 100%;
-                    height: 100%;
+                font-family: sans;
+                image-rendering: moz-crisp-edges;
+                image-rendering: pixelated;
+                padding: 0px;
+                margin: 0px;
+                scrollbar-width: thin;
+            }
+            code {
+                font-family: monospace;
+                font-size: 10pt;
+                display: block;
+                height: calc(100% - 12pt - 18pt - (6px * 2));
+                width: calc(100% - 5px);
+                overflow: scroll;
+                margin: 0px;
+                padding: 0px;
+                border: none;
+                border-bottom: 1px #DDDDDD solid;
+                scrollbar-width: thin;
+            }
+            h2 {
+                position: sticky;
+                top: 0px;
+                background-color: #FFFFFF;
+                margin: 0px;
+                padding: 6px;
+                font-size: 18pt;
+                border-bottom: 1px #DDDDDD solid
+            }
+            #sidepanel {
+                top: 51px;
+                right: 0px;
+                width: calc(30% - 10px);
+                height: calc(100vh - 51px);
+                overflow: scroll;
+                background-color: #FFFFFF;
+                position: fixed;
+                border-top: 1px solid;
+                border-left: 1px solid;
+                scrollbar-width: thin;
+            }
+            #sticky {
+                position: sticky;
+                top: 0px;
+                left: 0px;
+                background-color: #FFFFFF;
+            }
+            textarea {
+                resize: none;
+                width: calc(100% - 5px);
+                height: calc(100% - 12pt - 21pt - 18pt - (6px * 2));
+                margin: 0px;
+                padding: 0px;
+                border: none;
+                border-bottom: 1px #DDDDDD solid;
+                overflow: scoll;
+                scrollbar-width: thin;
+            }
+            button {
+                height: 16pt;
+                margin: 0px;
+                margin-top: 1pt;
+                margin-bottom: 4pt;
+                margin-right: 4pt;
+                padding: 1pt;
+                border: 1px #DDDDDD solid;
+                background-color: #FFFFFF;
+                box-shadow: 2pt 2pt #AAAAAA;
+            }
+            button:hover {
+                background-color: #DDDDDD;
+                box-shadow: 2pt 2pt #999999;
+            }
+            button:active {
+                border: 1px #AAAAAA solid;
+                background-color: #AAAAAA;
+                box-shadow: 2pt 2pt #777777;
             }
         </style>
     </head>
-    <header>
-        <table id = "choice" style = "top: 0; left: 0; height: 40px;
-                position: fixed; background-color: white;">
-        </table>
-    </header>
     <body style = "margin-top: 41px;">
+        <div style="width: 100%; height: 50px; top: 10px; overflow: scroll;
+            position: fixed;">
+            <table id = "choice" style = "background-color: white;">
+            </table>
+        </div>
+        <div style="width: 70%; height: calc(100vh - 61px); top: 51px;
+            overflow: scroll; position: fixed;">
+            <table border id = "table">
+                <!-- -->
+            </table>
+        </div>
         <script>
             tilenum = 1;
             let mapdata = Array();
@@ -72,14 +149,13 @@ along with this program. If not, see https://www.gnu.org/licenses/.
                     }
             }
         </script>
-        <table border id = "table" style = "top: 41px;">
-            <!-- -->
-        </table>
-        <p>Output</p>
-        <code id = "out"></code>
-        <p>Input</p>
-        <button onclick = "load();">Load</button>
-        <textarea id = "input"></textarea>
+        <div id="sidepanel">
+            <h2>Output</h2>
+            <code id = "out"></code>
+            <h2>Input</h2>
+            <textarea id = "input"></textarea>
+            <button onclick = "load();">Load</button>
+        </div>
         <script>
             function generatemap() {
                 var mapstr = "const unsigned char[3840] = {";
@@ -88,39 +164,41 @@ along with this program. If not, see https://www.gnu.org/licenses/.
                     mapstr += cell + ", ";
                 };
                 mapstr = mapstr.slice(0, -2);
-                mapstr += "};"
-                console.log(mapstr);
+                mapstr += "};";
                 out = document.getElementById("out");
                 out.innerHTML = mapstr;
             }
             function load() {
                 code_str = document.getElementById("input").value;
-                strdata = ""
-                var grab = 0
+                strdata = "";
+                var grab = 0;
                 for(i=0;i<code_str.length;i++){
                     if(code_str[i] == "}"){
-                        break
+                        break;
                     }
                     if(grab){
-                        strdata += code_str[i]
+                        strdata += code_str[i];
                     }
                     if(code_str[i] == "{"){
-                        grab = 1
+                        grab = 1;
                     }
                 }
-                let data = strdata.split(", ")
-                console.log(data)
-                mapdata = []
+                let data = strdata.split(", ");
+                mapdata = [];
                 for(i=0;i<data.length;i++){
-                    mapdata.push(Number(data[i]))
-                    div = document.getElementById(String(i))
+                    mapdata.push(Number(data[i]));
+                    div = document.getElementById(String(i));
                     div.style = "background-image: " +
                         "url('../../img/world1.png'); background-position: -" +
                         String(((mapdata[i]-1)%8)*32) + "px -" +
                         String(Math.floor((mapdata[i]-1)/8)*32) +
                         "px; width: 32px; height: 32px;";
                 }
-                generatemap()
+                for(i=0;i<60*64;i++){
+                    if(mapdata[i] == undefined) mapdata[i] = 25;
+                    console.log("loop");
+                }
+                generatemap();
             }
             table = document.getElementById("table");
             line = document.createElement("tr");
@@ -128,8 +206,7 @@ along with this program. If not, see https://www.gnu.org/licenses/.
             for(x=0;x<65;x++){
                 header = document.createElement("th");
                 header.scope = "column";
-                header.style = "position: sticky; top: 41px; " +
-                    "background-color: white;";
+                header.id = "sticky";
                 header.innerHTML = String(x);
                 line.append(header);
             };
@@ -138,8 +215,7 @@ along with this program. If not, see https://www.gnu.org/licenses/.
                 table.append(line);
                 header = document.createElement("th");
                 header.scope = "row";
-                header.style = "position: sticky; top: 41px; left: 0; " +
-                    "background-color: white;";
+                header.id = "sticky";
                 header.innerHTML = String(y+1);
                 line.append(header);
                 for(x=0;x<64;x++){
@@ -165,7 +241,7 @@ along with this program. If not, see https://www.gnu.org/licenses/.
                     }
                 };
             };
-            generatemap()
+            generatemap();
         </script>
     </body>
 </html>
