--- a/src/CalcRace.html
+++ b/src/CalcRace.html
@@ -20,7 +20,7 @@ along with this program. If not, see https://www.gnu.org/licenses/.
 <html style = "height: 100%; width: 100%; overflow: hidden;">
     <head>
         <title>CalcRace</title>
-        <link rel="icon" type="image/x-icon" href="favicon.ico">
+        <link rel="icon" type="image/png" href="favicon.png">
         <meta charset="utf-8"></meta>
         <meta name="viewport" content="width=device-width, user-scalable=no">
         <div style = "display: none;">
